k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vs-agent-ingress
  namespace: eafit-luisgarcia
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: myagent.luisgarcia.eafit.testnet.verana.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vs-agent
                port:
                  number: 3001
  tls:
    - hosts:
        - myagent.luisgarcia.eafit.testnet.verana.network
      secretName: vs-agent-tls
